# Chroma

./: LICENSE  README.md  package-lock.json
src/: index.html  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/css/: style.css
