[package]
name = "chroma"
version = "1.0.0"
description = "Chroma is a Chromium browser updater application"
authors = ["Sandun Wiratunga"]
license = "MIT"
repository = "https://github.com/sandunwira/Chroma"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
serde_json = "1"
tauri-bundler = "1.4.5"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.2", features = [ "window-close", "window-minimize", "window-hide", "fs-all", "window-show", "window-unminimize", "notification-all", "window-start-dragging", "updater", "shell-open"] }
window-shadows = "0.2.2"
reqwest = "0.12.5"
zip = "2.1.3"
tokio = { version = "1", features = ["full"] }
mslnk = "0.1.8"
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev" }
tauri-plugin-window-state = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev" }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
